(executable 
 (name httpaf_fib_server)
 (modules httpaf_fib_server)
 (libraries domainslib eio_main httpaf httpaf-eio faraday angstrom logs.fmt containers))

(executable 
 (name httpfibServerSequential)
 (modules httpfibServerSequential)
 (libraries domainslib eio_main httpaf httpaf-eio faraday angstrom logs.fmt containers))

(vendored_dirs vendor)
