(executable 
 (name httpaf_fib_server)
 (modules httpaf_fib_server)
 (libraries domainslib eio_main httpaf httpaf-eio faraday angstrom logs.fmt containers))

(executable 
 (name httpfibServerSequential)
 (modules httpfibServerSequential)
 (libraries domainslib eio_main httpaf httpaf-eio faraday angstrom logs.fmt containers))
 
(executable 
 (name domainManager)
 (modules domainManager)
 (libraries eio_main httpaf httpaf-eio faraday angstrom logs.fmt containers))


(executable 
 (name testEio)
 (modules testEio)
 (libraries eio_main))


(vendored_dirs vendor)
